--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "sails-crudface",
-    "version": "0.0.1",
+    "version": "0.0.4",
     "description": "A sailsjs node module for \"systematic\" scrud interface generation",
     "dependencies": {
         "sails": "latest"
     },
+    "repository": "https://github.com/cashbit/sails-crudface.git",
     "author": "Cashbit"
 }
